adjust style for different screen sizes to prevent navbar from cutting off content

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -11,8 +11,32 @@ main {
     margin-left: 55px;
     margin-right: 55px;
 }
+
+@media screen and (max-width: 397px) {
+    .section-heading:not(#welcome) {
+        margin-top: 220px;
+    }
+}
+
+@media screen and (max-width: 697px) and (min-width: 400px) {
+    .section-heading:not(#welcome) {
+        margin-top: 180px;
+    }
+}
+
+@media screen and (max-width: 1240px) and (min-width: 699px) {
+    .section-heading:not(#welcome) {
+        margin-top: 140px;
+    }
+}
+
+@media screen and (min-width: 1242px) {
+    .section-heading:not(#welcome) {
+        margin-top: 120px;
+    }
+}
+
 .section-heading:not(#welcome) {
-    margin-top: 100px;
     padding-bottom: 10px;
 }
 .form-group {
